merge HBH-579-29521 Code generation for expressions